update werewolf heaven world gen